--- a/docs/api-config.asciidoc
+++ b/docs/api-config.asciidoc
@@ -46,8 +46,8 @@ http(s)://{hostname}:{port}/config/v1/agents
 ==== Responses
 
 * Successful - `200`
-* {kib} endpoint is disabled - `403`
-* {kib} is unreachable - `503`
+* {es} is unreachable and {kib} endpoint is disabled - `403`
+* APM Server is starting up or both {es} and {kib} are unreachable - `503`
 
 [float]
 [[api-config-api-example]]
