Enable synthetic source for metrics data streams (#9756)

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -36,3 +36,4 @@ https://github.com/elastic/apm-server/compare/8.5\...main[View commits]
 - Tune internal server configuration based on available cgroup or machine RAM, improving resource utilization and performance {pull}9358[9358]
 - Disallow auto-scaling of active indexers when Elasticsarch 429 response rate exceeds 1% of total requests issued {pull}9463[9463]
 - We now record `transaction.representative_count` and `span.representative_count` -- the inverse sample rate {pull}9458[9458]
+- Metrics data streams now use synthetic source {pull}9756[9756]
