--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -6,7 +6,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 [float]
 ==== Breaking Changes
 - `transaction.failure_count` has been removed. `transaction.success_count` type has changed to `aggregated_metric_double` {pull}9791[9791]
-- TODO
+- `transaction.success_count` has been moved to `event.success_count` {pull}9819[9819]
 
 [float]
 ==== Deprecations
