sampling: don't block shutdown unnecessarily
Processor.Stop should only wait for the grace
period if there is actually work to be done.

The processor can stop as soon as the the final
reservoir flush has occurred, there are no more
pending publications or events to index; or if
the grace period elapses.

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -18,7 +18,8 @@ https://github.com/elastic/apm-server/compare/8.5\...main[View commits]
 
 [float]
 ==== Bug fixes
-- Change ownership of apm-server.yml and data/ to apm-server user in Docker image {pull} 9604[9604]
+- Change ownership of apm-server.yml and data/ to apm-server user in Docker image {pull}9604[9604]
+- We no longer unconditionally block shutdown for 5 seconds when tail-based sampling is enabled {pull}9838[9838]
 
 [float]
 ==== Intake API Changes
