--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -21,3 +21,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 [float]
 ==== Added
 - Metrics data streams now use synthetic source {pull}9756[9756]
+- Dedicated overflow buckets for transaction and service aggregation to limit cardinality {pull}9856[9856]
