--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -17,6 +17,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 [float]
 ==== Intake API Changes
 - Add `request.id` to `span.context.http` {pull}9673[9673]
+- Add `agent.activation_method` metadata field {pull}9850[9850]
 
 [float]
 ==== Added
