--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -23,3 +23,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 [float]
 ==== Added
 - Metrics data streams now use synthetic source {pull}9756[9756]
+- Add `event.success_count` to transaction events and transaction metrics {pull}9819[9819]
