Use dedicated overflow buckets for txn and svc aggregation to limit cardinality (#9856)
* For transaction metrics, once the limit on max transaction groups is reached
the metrics will overflow into a dedicated per-service `other` bucket. If the
max services limit is also reached then the metrics will overflow into an `other`
service bucket.
* For service metrics, once the limit on max groups is reached the metrics will
overflow into a dedicated `other` bucket.

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -24,3 +24,5 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 ==== Added
 - Metrics data streams now use synthetic source {pull}9756[9756]
 - Add `event.success_count` to transaction events and transaction metrics {pull}9819[9819]
+- Dedicated overflow buckets for transaction and service aggregation to limit cardinality {pull}9856[9856]
+- Automatically scale `MaxGroups` and `MaxTransactionGroups` based on available memory {pull}9856[9856]
