squash the bugs

--- a/docs/apm-components.asciidoc
+++ b/docs/apm-components.asciidoc
@@ -27,9 +27,8 @@ In addition, Elastic supports OpenTelemetry:
 
 image::./images/apm-otel-architecture.png[Architecture of Elastic APM with OpenTelemetry]
 
-+++*+++ The OpenTelemetry Bridge is available in the Elastic Java, .NET, Node.js, and Python agents
-
-+++**+++ the official https://opentelemetry.io/docs/instrumentation/[OpenTelemetry docs] for a full list of supported languages
+^&#42;^The OpenTelemetry Bridge is available in the Elastic Java, .NET, Node.js, and Python agents +
+^&#42;&#42;^See the official https://opentelemetry.io/docs/instrumentation/[OpenTelemetry docs] for a full list of supported languages
 
 // Not sure which to choose? See the [blog post]
 
