--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -7,6 +7,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 ==== Breaking Changes
 - `transaction.failure_count` has been removed. `transaction.success_count` type has changed to `aggregated_metric_double` {pull}9791[9791]
 - `transaction.success_count` has been moved to `event.success_count` {pull}9819[9819]
+- Improve APM UI query performance by introducing `10m` and `60m` aggregation intervals for transaction metrics. Store them into dedicated data streams `metrics-apm.transaction.${interval}`, and remove transaction metrics from `metrics-apm.interval` {pull}9846[9846]
 
 [float]
 ==== Deprecations
