--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -27,4 +27,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Add `event.success_count` to transaction events and transaction metrics {pull}9819[9819]
 - Dedicated overflow buckets for transaction and service aggregation to limit cardinality {pull}9856[9856]
 - Automatically scale `MaxGroups` and `MaxTransactionGroups` based on available memory {pull}9856[9856]
-- Add Elasticsearch fetcher for agent remote configuration {pull}9720[9720]
+- Use Elasticsearch fetcher for agent remote configuration {pull}9720[9720]
