docs: more release note reqs + breaking changes

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -1,4 +1,5 @@
 include::./changelogs/head.asciidoc[]
+include::./changelogs/8.6.asciidoc[]
 include::./changelogs/8.5.asciidoc[]
 include::./changelogs/8.4.asciidoc[]
 include::./changelogs/8.3.asciidoc[]
