--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -32,3 +32,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for transaction metrics. Store them into dedicated data streams `metrics-apm.transaction.${interval}` {pull}9846[9846]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service destination metrics. Store them into dedicated data streams `metrics-apm.service_destination.${interval}` {pull}9926[9926]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service metrics. Store them into dedicated data streams `metrics-apm.service.${interval}` {pull}9960[9960]
+- Add `transaction.duration.summary` to transaction metrics {pull}9973[9973]
