docs: more 8.6 release note reqs + breaking changes (#9936)
* docs: more release note reqs + breaking changes

* docs: feedback from Silvia

Co-authored-by: Marc Lopez Rubio <marc5.12@outlook.com>
(cherry picked from commit 1ab49725fbea53403f1924e87eced91661645246)

--- a/changelogs/8.6.asciidoc
+++ b/changelogs/8.6.asciidoc
@@ -3,6 +3,12 @@
 
 https://github.com/elastic/apm-server/compare/8.5\...8.6[View commits]
 
+* <<release-notes-8.6.0>>
+
+[float]
+[[release-notes-8.6.0]]
+=== APM version 8.6.0
+
 [float]
 ==== Breaking Changes
 - `apm-server.decoder.*` stack monitoring metrics are no longer recorded {pull}9210[9210]
@@ -28,10 +34,10 @@ https://github.com/elastic/apm-server/compare/8.5\...8.6[View commits]
 [float]
 ==== Added
 - Service metrics now support global labels {pull}9248[9248]
-- OpenTelemetry GRPC Spans from the Javascript API/SDK/Instrumentations are now correctly transformed into transactions with type=`request`
+- OpenTelemetry GRPC Spans from the Javascript API/SDK/Instrumentations are now correctly transformed into transactions with type=`request` {pull}9308[9308]
 - Improve Elasticsearch output performance, particularly when compression is enabled (default) {pull}9318[9318]
 - Java attacher support for macOS {pull}9413[9413]
 - Improve Elasticsearch output performance in instances with more than 6 cores {pull}9393[9393]
 - Tune internal server configuration based on available cgroup or machine RAM, improving resource utilization and performance {pull}9358[9358]
-- Disallow auto-scaling of active indexers when Elasticsarch 429 response rate exceeds 1% of total requests issued {pull}9463[9463]
+- Disallow auto-scaling of active indexers when Elasticsearch 429 response rate exceeds 1% of total requests issued {pull}9463[9463]
 - We now record `transaction.representative_count` and `span.representative_count` -- the inverse sample rate {pull}9458[9458]
