Add global labels to service_destination metrics

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -35,3 +35,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service metrics. Store them into dedicated data streams `metrics-apm.service.${interval}` {pull}9960[9960]
 - Add `transaction.duration.summary` to transaction metrics {pull}9973[9973]
 - Use Elasticsearch fetcher for agent remote configuration where possible {pull}9720[9720]
+- Add global labels to service destination metrics {pull}10056[10056]
