--- a/docs/open-telemetry.asciidoc
+++ b/docs/open-telemetry.asciidoc
@@ -30,9 +30,9 @@ Elastic integrates with OpenTelemetry, allowing you to reuse your existing instr
 to easily send observability data to the {stack}.
 There are four ways to integrate OpenTelemetry with the {stack}:
 
-**Elastic APM agent OpenTelemetry Bridge**
+**OpenTelemetry API/SDK with Elastic APM agents**
 
-To unlock the full power of the {stack}, use the Elastic APM OpenTelemetry Bridge,
+To unlock the full power of the {stack}, use the OpenTelemetry API/SDKs with Elastic APM agents,
 currently supported by the Java, Python, .NET, and Node.js agents.
 
 The Elastic OpenTelemetry bridge translates calls to the OpenTelemetry API to Elastic APM API calls.
