--- a/docs/otel-with-elastic.asciidoc
+++ b/docs/otel-with-elastic.asciidoc
@@ -1,12 +1,8 @@
 [[open-telemetry-with-elastic]]
-=== Elastic APM agent OpenTelemetry Bridge
+=== OpenTelemetry API/SDK with Elastic APM agents
 
-// Old title: OpenTelemetry API/SDK with Elastic APM agents
-// ++++
-// <titleabbrev>OpenTelemetry with Elastic APM agents</titleabbrev>
-// ++++
-
-The Elastic OpenTelemetry bridge translates calls to the OpenTelemetry API to Elastic APM API calls.
+Use the OpenTelemetry API/SDKs with Elastic APM agents.
+This "bridge" translates calls to the OpenTelemetry API to Elastic APM API calls.
 This allows you to reuse your existing instrumentation to create Elastic APM transactions and spans.
 
 TIP: If you'd like to use OpenTelemetry to send data directly to the APM server instead,
