Add overflow bucket to service destination

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -38,3 +38,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Add a service summary metrics aggregator that writes to `metrics-apm.service_summary.${interval}` with `1m`, `10m` and `60m` intervals {pull}10029[10029]
 - Add global labels to service destination metrics {pull}10056[10056]
 - Service metrics and service summary aggregations are now always enabled {pull}10060[10060]
+- Dedicated overflow buckets for service destination aggregation to limit cardinality {pull}10069[10069]
