changelog: add changelog entry

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -39,3 +39,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Add global labels to service destination metrics {pull}10056[10056]
 - Service metrics and service summary aggregations are now always enabled {pull}10060[10060]
 - Dedicated overflow buckets for service destination aggregation to limit cardinality {pull}10069[10069]
+- Translate otel log events to error events {pull}10066[10066]
