Rectified all the solution hyperlinks of HTTP 503: Queue is full in Legacy APM Server Reference documentation
The below hyperlinks are wrongly pointed

In Legacy APM Server Reference documentation - https://www.elastic.co/guide/en/apm/server/current/common-problems.html#queue-full, the solutions have wrong hyperlinks. 

However, APM Guide - https://www.elastic.co/guide/en/apm/guide/7.17/common-problems.html#queue-full has the correct hyperlinks.

Hence, I have updated the below hyperlinks for Legacy APM Server Reference documentation - https://www.elastic.co/guide/en/apm/server/current/common-problems.html#queue-full

Correct Hyperlinks:

Reduce storage - https://www.elastic.co/guide/en/apm/guide/7.17/reduce-storage.html

Tune APM Server output parameters for your Elasticsearch cluster - https://www.elastic.co/guide/en/apm/guide/7.17/tune-apm-server.html#tune-output-config

Adjust internal queue size - https://www.elastic.co/guide/en/apm/guide/7.17/tune-apm-server.html#adjust-queue-size

Tune Elasticsearch for higher ingestion - https://www.elastic.co/guide/en/apm/guide/7.17/tune-es.html

--- a/docs/common-problems.asciidoc
+++ b/docs/common-problems.asciidoc
@@ -100,8 +100,8 @@ If the APM Server returns interleaved 503 and 202 responses, it indicates that t
 You have a few options to solve this problem:
 
 * <<reduce-storage, Reduce storage>>
-* <<tune-output-config>>
-* <<adjust-queue-size>>
+* <<tune-apm-server, Tune APM Server output parameters for your Elasticsearch cluster>>
+* <<tune-apm-server, Adjust internal queue size>>
 * <<tune-es, Tune Elasticsearch for higher ingestion>>
 
 [[request-timed-out]]
