add other-ex-env file and move lambda content

--- a/docs/open-telemetry.asciidoc
+++ b/docs/open-telemetry.asciidoc
@@ -67,7 +67,7 @@ include::./otel-with-elastic.asciidoc[]
 
 include::./otel-direct.asciidoc[]
 
-include::./otel-lambda.asciidoc[]
+include::./otel-other.asciidoc[]
 
 include::./otel-metrics.asciidoc[]
 
