docs: update OpenTelemetry documentation (#9915)
* docs: update OTel docs

* explain why you shouldn’t use the es exporter

* squash the bugs

* add svg diagram and remove old png

* docs: feedback from Emily

* docs: update OTEL diagram

* docs: feedback

* docs: more

* add other-ex-env file and move lambda content

--- a/docs/apm-components.asciidoc
+++ b/docs/apm-components.asciidoc
@@ -25,7 +25,12 @@ Or, APM agents and the APM integration live on edge machines and enroll via a ce
 [subs=attributes+]
 include::./diagrams/apm-architecture-edge.asciidoc[Elastic APM architecture with central APM integration]
 
-Read on to learn more about each of these components!
+In addition, Elastic supports OpenTelemetry:
+
+[subs=attributes+]
+include::./diagrams/apm-otel-architecture.asciidoc[Architecture of Elastic APM with OpenTelemetry]
+
+// Not sure which to choose? See the [blog post]
 
 [float]
 === APM Agents
