Adjust max_groups autosizing scale

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -28,7 +28,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Metrics data streams now use synthetic source {pull}9756[9756]
 - Add `event.success_count` to transaction events and transaction metrics {pull}9819[9819] {pull}10165[10165]
 - Dedicated overflow buckets for transaction and service aggregation to limit cardinality {pull}9856[9856]
-- Automatically scale `MaxGroups` and `MaxTransactionGroups` based on available memory {pull}9856[9856]
+- Automatically scale `MaxGroups`, `MaxTransactionGroups` and `MaxServices` based on available memory {pull}9856[9856] {pull}10157[10157]
 - Set `_doc_count` for service destination metrics {pull}9931[9931]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for transaction metrics. Store them into dedicated data streams `metrics-apm.transaction.${interval}` {pull}9846[9846]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service destination metrics. Store them into dedicated data streams `metrics-apm.service_destination.${interval}` {pull}9926[9926]
