--- a/docs/legacy/copied-from-beats/outputs/console/docs/console.asciidoc
+++ b/docs/legacy/copied-from-beats/outputs/console/docs/console.asciidoc
@@ -22,6 +22,13 @@ output.console:
   pretty: true
 ------------------------------------------------------------------------------
 
+ifdef::apm-server[]
+[float]
+==== Configure the {kib} output
+
+include::../../../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
+endif::[]
+
 ==== Configuration options
 
 You can specify the following `output.console` options in the +{beatname_lc}.yml+ config file:
