--- a/docs/legacy/copied-from-beats/outputs/fileout/docs/fileout.asciidoc
+++ b/docs/legacy/copied-from-beats/outputs/fileout/docs/fileout.asciidoc
@@ -27,6 +27,13 @@ output.file:
   #rotate_on_startup: true
 ------------------------------------------------------------------------------
 
+ifdef::apm-server[]
+[float]
+==== Configure the {kib} output
+
+include::../../../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
+endif::[]
+
 ==== Configuration options
 
 You can specify the following `output.file` options in the +{beatname_lc}.yml+ config file:
